--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "rxjs": "^7.4.0"
   },
   "devDependencies": {
     "typescript": "^4.5.2"
